--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,12 @@
 .headerAllaSidor {
     grid-area: he;
     background-color: aqua;
+    padding: 3.5%;
+    font-size: 2em;
 }
 
 #alltIndex h1{
     text-align: center;
-    padding: 3.5%;
-    font-size: 2.5em;
-    
-    
 }
 
 #alltIndex p{
@@ -84,6 +82,10 @@
 }
 
 .facebook {
+    grid-area: fb;
+}
+
+#facebook {
     grid-area: fb;
 }
 
@@ -175,12 +177,13 @@ section h2 {
     grid-area: SA;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(1fr, 5);
     grid-template-areas: 
     "h1 h1"
     "h2 h2"
     "s1 s2"
     "s1 s2"
+    "s3 s3"
     ;
 
 }
@@ -201,6 +204,13 @@ section h2 {
     flex-direction: column;
     border: 1px solid black;
     margin: 10%;
+}
+
+.articleSamverkan3 {
+    grid-area: s3;
+    margin: 3%;
+    margin-left: 40%;
+    margin-right: 40%;
 }
 
 .headerSamverkan {
@@ -228,10 +238,10 @@ ul {
     font-size: 100%;
     display: flex;
     width: 100vw;
-    height: 130vh;
+    height: 120vh;
     display: grid;
     grid-template-columns: 1fr 1fr 0.25fr;
-    grid-template-rows: 0.6fr 3fr 1fr;
+    grid-template-rows: 0.6fr 3fr 0.5fr;
     grid-template-areas: 
     "he he dv"
     "GA GA GA"
@@ -240,3 +250,6 @@ ul {
 
 }
 
+.innerGalleri {
+
+}
