--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
     grid-template-columns: 1fr 1fr 0.25fr;
     grid-template-rows: 0.6fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
-    "BB BB BB"
+    "he he dv"
     "a1 a1 a1"
     "a2 a2 a2"
     "a3 a3 a3"
@@ -23,20 +23,8 @@
     ;
 }
 
-.bakgrundsBild {
-    grid-area: BB;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: space-between;
-}
-
-.panalLogga {
-    background-color: aqua;
-    width: 30%;
-}
-
 .headerAllaSidor {
+    grid-area: he;
     background-color: aqua;
     padding: 3.5%;
     font-size: 2em;
@@ -71,9 +59,13 @@
 }
 
 .footerDiv {
+    display: grid;
     grid-area: d1;
-    display: flex;
-    flex-direction: row;
+    grid-template-columns: 1fr 0.1fr 0.1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+    "mp in fb"
+    ;
 }
 
 .burgerMeny {
@@ -107,6 +99,7 @@ section h2 {
 
 
 .burgerMeny {
+    grid-area: dv;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,16 +163,17 @@ section h2 {
     font-size: 100%;
     display: flex;
     width: 100vw;
-    height: 150vh;
+    height: 130vh;
     display: grid;
-    grid-template-columns: 0.2fr 1fr 0.2fr;
-    grid-template-rows: 0.3fr 3fr 1fr;
+    grid-template-columns: 1fr 1fr 0.25fr;
+    grid-template-rows: 0.6fr 3fr 1fr;
     grid-template-areas: 
-    "pl he dv"
+    "he he dv"
     "SA SA SA"
     "d1 d1 d1"
     ;
 }
+
 
 .innerSamverkan {
     grid-area: SA;
@@ -195,6 +189,7 @@ section h2 {
     ;
 
 }
+
 
 .articleSamverkan1 {
     grid-area: s1;
@@ -215,11 +210,9 @@ section h2 {
 
 .articleSamverkan3 {
     grid-area: s3;
-    margin-top: -3%;
-    margin-bottom: 3%;
-    margin-left: 28%;
-    margin-right: 28%;
-    border: 1px solid black;
+    margin: 3%;
+    margin-left: 40%;
+    margin-right: 40%;
 }
 
 .headerSamverkan {
@@ -237,54 +230,28 @@ section h2 {
 }
 
 ul {
+    background: #ff9999;
     padding: 20px;
-    list-style-type: none;
   }
 
 /* Galleri */
 
 #alltGalleri {
-    text-align: center;
     font-size: 100%;
     display: flex;
     width: 100vw;
-    height: 150vh;
+    height: 120vh;
     display: grid;
-    grid-template-columns: 0.2fr 1fr 0.2fr;
-    grid-template-rows: 0.3fr 3fr 1fr;
+    grid-template-columns: 1fr 1fr 0.25fr;
+    grid-template-rows: 0.6fr 3fr 0.5fr;
     grid-template-areas: 
-    "pl he dv"
+    "he he dv"
     "GA GA GA"
     "d1 d1 d1"
-    ;
+        ;
+
 }
 
 .innerGalleri {
-    grid-area: GA;
 
-}
-
-.articleGalleri {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-.bilderGalleri {
- width: 50%;
- align-self: flex-start;
-}
-
-.bilderOchInfo {
-    display: flex;
-    border: 1px solid black;
-    margin-bottom: 5%;
-    margin-left: 20%;
-    margin-right: 20%;
-    flex-direction: row;
-    width: 100vh;
-}
-
-.bilderOchInfo strong {
-    font-size: 120%;
 }
