--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,12 @@
 .headerAllaSidor {
     grid-area: he;
     background-color: aqua;
+    padding: 3.5%;
+    font-size: 2em;
 }
 
 #alltIndex h1{
     text-align: center;
-    padding: 3.5%;
-    font-size: 2.5em;
-    
-    
 }
 
 #alltIndex p{
@@ -87,6 +85,10 @@
 .facebook {
     grid-area: fb;
     align-self: flex-end;
+}
+
+#facebook {
+    grid-area: fb;
 }
 
 section h2 {
@@ -177,12 +179,13 @@ section h2 {
     grid-area: SA;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(1fr, 5);
     grid-template-areas: 
     "h1 h1"
     "h2 h2"
     "s1 s2"
     "s1 s2"
+    "s3 s3"
     ;
 
 }
@@ -205,8 +208,6 @@ section h2 {
     margin: 10%;
 }
 
-<<<<<<< HEAD
-=======
 .articleSamverkan3 {
     grid-area: s3;
     margin: 3%;
@@ -214,7 +215,6 @@ section h2 {
     margin-right: 40%;
 }
 
->>>>>>> parent of 9b9edcf... RutinPush
 .headerSamverkan {
     grid-area: h1;
     font-size: 150%;
@@ -240,61 +240,18 @@ ul {
     font-size: 100%;
     display: flex;
     width: 100vw;
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-    height: 130vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 0.25fr;
-    grid-template-rows: 0.6fr 3fr 1fr;
-=======
     height: 120vh;
     display: grid;
     grid-template-columns: 1fr 1fr 0.25fr;
     grid-template-rows: 0.6fr 3fr 0.5fr;
->>>>>>> parent of 9b9edcf... RutinPush
-=======
-=======
->>>>>>> parent of 9b9edcf... RutinPush
-    height: 120vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 0.25fr;
-    grid-template-rows: 0.6fr 3fr 0.5fr;
-<<<<<<< HEAD
->>>>>>> parent of 9b9edcf... RutinPush
-=======
->>>>>>> parent of 9b9edcf... RutinPush
     grid-template-areas: 
     "he he dv"
     "GA GA GA"
     "d1 d1 d1"
         ;
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-}
-
-=======
-=======
->>>>>>> parent of 9b9edcf... RutinPush
-
-}
-
-.innerGalleri {
-<<<<<<< HEAD
-
-}
->>>>>>> parent of 9b9edcf... RutinPush
-=======
 
 }
 
 .innerGalleri {
 
 }
->>>>>>> parent of 9b9edcf... RutinPush
-=======
-
-}
->>>>>>> parent of 9b9edcf... RutinPush
