--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0px;
+    margin: 0%;
     padding: 0px;
     box-sizing: border-box;
 }
@@ -10,34 +10,56 @@
     font-size: 100%;
     display: flex;
     width: 100vw;
-    height: 130vh;
+    height: 120%;
     display: grid;
-    grid-template-columns: 1fr 1fr 0.25fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.6fr 1fr 1fr 1fr 1fr;
     grid-template-areas: 
-    "BB BB BB"
-    "a1 a1 a1"
-    "a2 a2 a2"
-    "a3 a3 a3"
-    "d1 d1 d1"
+    "BB BB"
+    "II II"
+    "II II"
+    "II II"
+    "d1 d1"
     ;
 }
 
-.bakgrundsBild {
+.innerIndex {
+    height: 20vh;
+    grid-area: II;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+
+}
+
+#bakgrundsBild {
     grid-area: BB;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    background-image: url(../img/Background4header.png);
+    background-size: 100vw;
+    background-repeat: no-repeat;
+    align-content: center;
 }
 
 .panalLogga {
-    background-color: aqua;
-    width: 30%;
+    grid-area: pl;
+    width: 12%;
+    margin-left: 2%;
 }
 
 .headerAllaSidor {
-    background-color: aqua;
-    padding: 3.5%;
-    font-size: 2em;
+    grid-area: he;
+    padding: 4%;
+    font-size: 220%;
+    margin-left: 6%;
+    display: block;
+    background-color: white;
+    margin-top: 2%;
+    border-radius: 50px;
+    
 }
 
 #alltIndex h1{
@@ -54,21 +76,10 @@
 
 /* Index sida */
 
-.articleIndex {
-    grid-area: a1;
-}
-
-.articleIndex2 {
-    grid-area: a2;
-    text-align: center;
-}
-
-.articleIndex3 {
-    grid-area: a3;
-    text-align: center;
-}
 
 .footerDiv {
+    margin-top: auto;
+    margin-bottom: auto;
     grid-area: d1;
     display: grid;
     grid-template-columns: 1fr 0.1fr 0.1fr;
@@ -107,12 +118,11 @@ section h2 {
 
 
 .burgerMeny {
+    grid-area: dv;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
-    font-family: sans-serif;
-    width: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .burgerLinks {
@@ -123,7 +133,7 @@ section h2 {
     right: 0px;
     height: 90vh;
     top: -90vh;
-    background-color: aqua;
+    background-color:  rgba(63, 63, 63, 0.911);
     align-items: center;
 }
 
@@ -136,17 +146,17 @@ section h2 {
 }
 
 .burgerLinks a {
-    color:rgb(156, 191, 214);
+    color: rgba(230, 230, 230, 0.911);
     text-decoration: none;
-    letter-spacing: 3px;
+    letter-spacing: 2%;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.5em;
 }
 
 .burger div {
     width: 2em;
     height: 3px;
-    background-color:rgb(156, 191, 214);
+    background-color: rgba(204, 204, 204, 0.911);
     margin: 5px;
     border-radius: 10%;
 }
@@ -163,6 +173,10 @@ section h2 {
     transform: rotate(45deg) translate(-5px, -6px);
 }
 
+.burgerMeny ul {
+    margin-top: 0%;
+}
+
 /* Samverkan */
 
 #alltSamverkan {
@@ -170,12 +184,12 @@ section h2 {
     font-size: 100%;
     display: flex;
     width: 100vw;
-    height: 150vh;
+    height: 200vh;
     display: grid;
     grid-template-columns: 0.2fr 1fr 0.2fr;
     grid-template-rows: 0.3fr 3fr 1fr;
     grid-template-areas: 
-    "pl he dv"
+    "BB BB BB"
     "SA SA SA"
     "d1 d1 d1"
     ;
@@ -193,7 +207,8 @@ section h2 {
     "s1 s2"
     "s3 s3"
     ;
-
+    background-color: white;
+    background-image: url(../img/Bakrgund.innehåll.png);
 }
 
 .articleSamverkan1 {
@@ -202,6 +217,7 @@ section h2 {
     flex-direction: column;
     border: 1px solid black;
     margin: 10%;
+    background-color: solid white;
 }
 
 
@@ -241,6 +257,10 @@ ul {
     list-style-type: none;
   }
 
+.bilderSamverkan {
+    size: 10%;
+}
+
 /* Galleri */
 
 #alltGalleri {
@@ -253,7 +273,7 @@ ul {
     grid-template-columns: 0.2fr 1fr 0.2fr;
     grid-template-rows: 0.3fr 3fr 1fr;
     grid-template-areas: 
-    "pl he dv"
+    "BB BB BB"
     "GA GA GA"
     "d1 d1 d1"
     ;
@@ -288,3 +308,22 @@ ul {
 .bilderOchInfo strong {
     font-size: 120%;
 }
+
+
+.demo-wrap {
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+  }
+  
+  .demo-content {
+    position: relative;
+  }
