--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,8 @@
 /* Allt */
 
 .footerDiv {
-    margin-right: 4%;
-    margin-top: 3%;
-    height: 20vh;
+    padding: 2%;
+    padding-bottom: 4%;
     grid-area: d1;
     display: grid;
     grid-template-columns: 1fr 0.1fr 0.1fr;
@@ -17,6 +16,8 @@
     grid-template-areas:
     "mp in fb"
     ;
+    background-color: white;
+    position: inherit;
 }
 
 .lokalisering {
@@ -25,10 +26,12 @@
 
 .instagram {
     grid-area: in;
+    width: 120%;
 }
 
 .facebook {
     grid-area: fb;
+    width: 120%;
 }
 
 #facebook {
@@ -57,6 +60,7 @@
     grid-area: he;
     padding: 1.5%;
     font-size: 220%;
+    width: 100%;
     margin-left: 9%;
     display: block;
     margin-top: 2%;
@@ -67,16 +71,17 @@
 
 #alltIndex {
     font-size: 100%;
-    width: 100vw;
-    height: 120%;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 3fr 1fr;
+    grid-template-rows: 20vh 3fr 15vh;
     grid-template-areas: 
     "BB BB"
     "II II"
     "d1 d1"
     ;
+    background-image: url(../img/Bakrgund.innehåll.png);
 }
 
 #alltIndex div{
@@ -120,10 +125,6 @@
 .burgerMeny {
     grid-area: dv;
     width: 20%;
-}
-
-section h2 {
-    text-align: center;
 }
 
 /* Burger */
@@ -220,7 +221,6 @@ section h2 {
     "s1 s2"
     "s3 s3"
     ;
-    background-color: white;
     background-image: url(../img/Bakrgund.innehåll.png);
 }
 
@@ -229,7 +229,8 @@ section h2 {
     display: flex;
     flex-direction: column;
     margin: 10%;
-    background-color: white;
+    border:solid rgb(248, 248, 248);
+    text-align: center;
 }
 
 
@@ -237,7 +238,7 @@ section h2 {
     grid-area: s2;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    border:solid rgb(248, 248, 248);
     margin: 10%;
 }
 
@@ -247,8 +248,8 @@ section h2 {
     margin-bottom: 3%;
     margin-left: 28%;
     margin-right: 28%;
-    border: 1.5px solid black;
-    background-color: white;
+
+    border:solid rgb(248, 248, 248);
 }
 
 .articleSamverkan1 div {
@@ -291,6 +292,10 @@ ul {
     size: 100%;
 }
 
+.articleGerlersborg {
+    text-align: start;
+}
+
 /* Galleri */
 
 #alltGalleri {
@@ -301,17 +306,18 @@ ul {
     height: 150vh;
     display: grid;
     grid-template-columns: 0.2fr 1fr 0.2fr;
-    grid-template-rows: 20vh 3fr 1fr;
+    grid-template-rows: 20vh 100% 25vh;
     grid-template-areas: 
     "BB BB BB"
     "GA GA GA"
     "d1 d1 d1"
     ;
+    background-image: url(../img/Bakrgund.innehåll.png);
 }
 
 .innerGalleri {
     grid-area: GA;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .articleGalleri {
@@ -321,7 +327,7 @@ ul {
 }
 
 .bilderGalleri {
-    width: 50%;
+    width: 10vw;
     align-self: flex-start;
 }
 
@@ -329,10 +335,12 @@ ul {
     display: flex;
     border: 1px solid black;
     margin-bottom: 5%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
     flex-direction: row;
-    width: 100vh;
+    height: 100%;
+    text-align: center;
+    
 }
 
 .bilderOchInfo strong {
@@ -347,7 +355,6 @@ ul {
 /*På Gång*/
 
 #alltPagang {
-    text-align: center;
     font-size: 100%;
     display: flex;
     width: 100vw;
@@ -360,6 +367,15 @@ ul {
     "PG PG PG"
     "d1 d1 d1"
     ;
+    background-image: url(../img/Bakrgund.innehåll.png);
+}
+
+#alltPagang h1{
+    text-align: center;
+}
+
+#alltPagang img{
+    align-self: center;
 }
 
 .innerPagang {
@@ -369,10 +385,19 @@ ul {
     align-self: center;
     margin-left: 15%;
     margin-right: 15%;
+    padding: 5%;
 }
 
 .bilderPagang {
     border-radius: 150px;
+}
+
+.bilderOchHeadline {
+    margin-bottom: 10%;
+}
+
+.bilderOchHeadline img {
+    width: 30%;
 }
 
 .bilderOchHeadline h4 {
@@ -385,26 +410,46 @@ ul {
     margin-bottom: 5%;
 }
 
-.bilderOchHeadline {
-    border: 1px solid black;
-}
+
 
 .divPagang {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    border: 1px solid black;
+    justify-content: space-around;
     margin-top: 10%;
     margin: 5%;
 }
 
+.divPagang img {
+    width: 10vw;
+    position: static;
+}
+
+.divPagang p {
+    height: 90%;
+}
 .innerDivPagang {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    border: 2px solid white
 }
 
+@media screen and (max-width: 375px) {
+
+    .divPagang {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10%;
+        margin: 5%;
+    }
+
+    .innerDivPagang {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
 /*Om Oss*/
 
 #alltOmOss {
@@ -412,7 +457,7 @@ ul {
     font-size: 100%;
     display: flex;
     width: 100vw;
-    height: 150vh;
+    height: 100%;
     display: grid;
     grid-template-columns: 0.2fr 1fr 0.2fr;
     grid-template-rows: 20vh 3fr 1fr;
@@ -421,6 +466,7 @@ ul {
     "OO OO OO"
     "d1 d1 d1"
     ;
+    background-image: url(../img/Bakrgund.innehåll.png);
 }
 
 .innerOmOss {
@@ -430,7 +476,6 @@ ul {
     margin-right: 20%;
     flex-direction: column;
     justify-content: space-around;
-    
 }
 
 .bilderOmOss {
@@ -441,6 +486,7 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    padding: 3%;
 }
 
 .innerOmOss h1 {
