--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
 
 /* Allt */
 
+body {
+    font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
+  }
+
 .footerDiv {
     padding: 2%;
     padding-bottom: 4%;
@@ -26,12 +30,17 @@
 
 .instagram {
     grid-area: in;
-    width: 120%;
+}
+
+.instaBild {
+    width: 100%;
+}
+.facebookBild {
+    width: 100%;
 }
 
 .facebook {
     grid-area: fb;
-    width: 120%;
 }
 
 #facebook {
@@ -59,8 +68,7 @@
 .headerAllaSidor {
     grid-area: he;
     padding: 1.5%;
-    font-size: 220%;
-    width: 100%;
+    font-size: 30px;
     margin-left: 9%;
     display: block;
     margin-top: 2%;
@@ -289,7 +297,7 @@ ul {
   }
 
 .bilderSamverkan {
-    size: 100%;
+    width: 100%;
 }
 
 .articleGerlersborg {
@@ -355,7 +363,8 @@ ul {
 /*På Gång*/
 
 #alltPagang {
-    font-size: 100%;
+    text-align: center;
+    font-size: 16px;
     display: flex;
     width: 100vw;
     height: 150vh;
@@ -370,8 +379,8 @@ ul {
     background-image: url(../img/Bakrgund.innehåll.png);
 }
 
-#alltPagang h1{
-    text-align: center;
+.innerPagang p{
+    text-align: start;
 }
 
 #alltPagang img{
@@ -382,7 +391,6 @@ ul {
     grid-area: PG;
     display: flex;
     flex-direction: column;
-    align-self: center;
     margin-left: 15%;
     margin-right: 15%;
     padding: 5%;
@@ -435,21 +443,11 @@ ul {
     border: 2px solid white
 }
 
-@media screen and (max-width: 375px) {
+.innerDivPagang h2{
+    padding-bottom: 15%;
 
-    .divPagang {
-        display: flex;
-        flex-direction: column;
-        margin-top: 10%;
-        margin: 5%;
-    }
-
-    .innerDivPagang {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
 }
+
 /*Om Oss*/
 
 #alltOmOss {
@@ -480,6 +478,7 @@ ul {
 
 .bilderOmOss {
     border-radius: 100px;
+    width: 100%;
 }
 
 .scenkonstnärerna {
@@ -492,3 +491,39 @@ ul {
 .innerOmOss h1 {
     font-size: 220%;
 }
+
+
+/*Responsivitet*/
+
+@media screen and (max-width: 800px) {
+
+    .panalLogga {
+        grid-area: pl;
+        font-size: 10px;
+        margin-left: 2%;
+    }
+
+    .divPagang {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10%;
+        margin: 5%;
+    }
+
+    .innerDivPagang {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    html {
+       /* font-size: calc(70% + 6 * ((100vw - 320%) / 680)); */
+        font-size: calc(13px + 6 * ((100vw - 320px) / 680));
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    html {
+      font-size: 16px;
+    }
+  }
